<resources>
    <string name="app_name">Trucker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Senha</string>
    <string name="user">Usuário</string>
    <string name="login">Login</string>
    <string name="remember">Lembrar-me</string>
    <string name="home">Início</string>
    <string name="settings">Configs.</string>
    <string name="records">Registros</string>
    <string name="profile_image">Profile image</string>
    <string name="fuel_image">Fuel image</string>
    <string name="on_value">no valor:</string>
    <string name="value">Valor</string>
    <string name="floating_action_button_for_add_data">Floating action button for add data</string>
    <string name="item_image">Item image</string>
    <string name="documents">Documentos</string>
    <string name="name">Nome</string>
    <string name="valid_until">valido até:</string>
    <string name="orders">Pedidos</string>
    <string name="valor">Valor</string>
    <string name="currency">R$</string>
    <string name="status_order">Status do pedido</string>
    <string name="add_a_new_order">Add a new order</string>
    <string name="change_pass_fragment_header_text">Sua senha precisa ter no mínimo 6 e no máximo 12 caracteres. Apenas números são aceitos.</string>
    <string name="current_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="repeat_new_password">Repita a nova senha</string>
    <string name="default_theme">Default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="bank_image">Bank Image</string>
    <string name="travels">Viagens</string>
    <string name="travel_start_date">Data inicial</string>
    <string name="travel_end_date">Data final</string>
    <string name="status">Situação</string>
    <string name="icon_of_start_travel">Icon of start travel</string>
    <string name="icon_of_end_travel">Icon of end travel</string>
    <string name="to_receive">A receber</string>
    <string name="my_performance">Meu desempenho</string>
    <string name="details">Detalhes</string>
    <string name="goal">Meta</string>
    <string name="achieved">Atingido</string>
    <string name="progress">Progresso</string>
    <string name="my_fines">Minhas multas</string>
    <string name="fine_image">Fine image</string>
    <string name="accumulated_fines">Multas acumuladas</string>
    <string name="new_fines">Novas multas</string>
    <string name="time_line">Linha do tempo</string>
    <string name="time_line_image">Time line image</string>
    <string name="time_line_description">Aqui você vai encontrar uma linha do tempo com os principais acontecimentos de forma cronologica.</string>
    <string name="fine">Fine</string>
    <string name="hand_shaking">Hand shaking</string>
    <string name="document">Document</string>
    <string name="expiration">Vencimento</string>
    <string name="back_arrow">Back arrow</string>
    <string name="blank_space" />
    <string name="price">Preço</string>
    <string name="date">Data</string>
    <string name="cost">Custo</string>
    <string name="expense">Despesa</string>
    <string name="refuel">Abastecimento</string>
    <string name="order">Ordem:</string>
    <string name="contains">Contém:</string>
    <string name="cost_image">Cost image</string>
    <string name="wallet_image">Wallet image</string>
    <string name="save">Salvar</string>
    <string name="client">Cliente:</string>
    <string name="freight_image">Imagem de Frete</string>
    <string name="edit">Editar</string>
    <string name="delete">Apagar</string>
    <string name="station">Posto</string>
    <string name="payments">Pagamento</string>
    <string name="payment_image">Payment Image</string>
    <string name="refund">Reembolso</string>
    <string name="refund_image">Refund image</string>
    <string name="discounts">Desconto</string>
    <string name="discount_image">Discount image</string>
    <string name="commission">Comissão</string>
    <string name="my_commission">Minha comissão:</string>
    <string name="total">Total:</string>
    <string name="installment">Parcela:</string>
    <string name="salary_advance">Adiantamento</string>
    <string name="payroll_loan">Consignado</string>
    <string name="add_pix">Adicionar pix</string>
    <string name="document_image">Document Image</string>
    <string name="change">Alterar</string>
    <string name="payments_key">Chave para pagamento</string>
    <string name="add_item">Adicionar item</string>
    <string name="items">Itens</string>
    <string name="request_add_choise">O que você deseja adicionar?</string>
    <string name="travel_advance">Vale para viagem</string>
    <string name="refuel_data">Dados do abastecimento</string>
    <string name="current_km">Km atual</string>
    <string name="cost_data">Dados do custo</string>
    <string name="type">Tipo</string>
    <string name="your_request_contains">Sua requisição contém:</string>
    <string name="plate">Placa</string>
    <string name="driver">Motorista</string>
    <string name="summary">Resumo</string>
    <string name="branch">Agência</string>
    <string name="number">Conta</string>
    <string name="pix">Pix</string>
    <string name="bank">Banco</string>
    <string name="key">Chave</string>
    <string name="main_acc">Conta principal</string>
    <string name="start">Inicio</string>
    <string name="full_tank">Tanque cheio</string>
    <string name="odometer_measure">Quilometragem</string>
    <string name="amount_liters">Quantidade de litros</string>
    <string name="value_liter">Valor do litro</string>
    <string name="total_value">Valor total</string>
    <string name="diesel">Diesel</string>
    <string name="general_information">Informações gerais</string>
    <string name="company">Empresa</string>
    <string name="description">Descrição</string>
    <string name="daily">Diárias</string>
    <string name="freight_value">Valor do frete</string>
    <string name="daily_value">Valor total das diárias</string>
    <string name="break_down">Avarias</string>
    <string name="origin">Origem</string>
    <string name="destiny">Destino</string>
    <string name="cargo">Carga</string>
    <string name="weight">Peso</string>
    <string name="content">Conteúdo</string>
    <string name="customer">Cliente</string>
    <string name="paid_by_employee">Pago pelo motorista</string>
    <string name="forget_pass">Esqueci a senha</string>
    <string name="loading">Carregando...</string>
    <string name="help">Ajuda</string>
    <string name="no_data_found">Nada encontrado</string>
    <string name="failed_to_load">Falha na busca</string>
    <string name="no_travel_found">Você ainda não possui viagens cadastradas. Para visualizar seu desempenho, adicione novas viagens.</string>
    <string name="balance">Saldo</string>
    <string name="travel_aid">Vale para viagem</string>
    <string name="amount">Quantidade</string>
    <string name="freights">Fretes</string>
    <string name="refuels">Abastecimentos</string>
    <string name="outlays">Despesas</string>
    <string name="finish">Finalizar</string>
    <string name="view">Visualizar</string>
    <string name="add_image">Adicionar imagem</string>
    <string name="sign">R$</string>
    <string name="back">Voltar</string>
    <string name="loading_image">Carregando imagem...</string>
    <string name="invoice">Nota</string>
    <string name="ticket">Ticket descarga</string>

</resources>