<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/plate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate"
            android:textSize="14sp"
            android:textColor="@color/light_grey"

            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/plate_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="RIF6A07"
            android:textSize="16sp"

            android:layout_alignParentStart="true"
            android:layout_below="@id/plate_text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textSize="14sp"
            android:textColor="@color/light_grey"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_alignStart="@id/driver_field"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:id="@+id/driver_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="José Anacrizio"
            android:textSize="16sp"

            android:layout_alignParentEnd="true"
            android:layout_below="@id/plate_text"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_value"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/light_grey"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/value_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="R$ 2.800,00"
        android:layout_marginHorizontal="16dp"
        android:textSize="18sp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

</LinearLayout>