<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.nav_settings.bank.bank_editor.BankEditorFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/frag_bank_editor_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/frag_bank_editor_bank_auto_complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="@string/bank"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:padding="16dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/frag_bank_editor_branch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:hint="@string/branch"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/frag_bank_editor_acc_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:hint="@string/number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/fragment_bank_editor_auto_complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:hint="@string/pix"
                        android:maxLines="1"
                        android:padding="16dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/frag_bank_editor_pix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:hint="@string/key"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/frag_bank_editor_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/save" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp"/>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>

